# freedy

./: .gitignore  CLAUDE.md  LICENSE  README.md  biome.json  index.html  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: Library.tsx  Reader.tsx  ReaderControls.tsx  WordDisplay.tsx
src/hooks/: use-keyboard.ts  use-persistence.ts  use-rsvp-engine.ts
src/lib/: parser.ts  tokenizer.ts  types.ts
src/stores/: app-store.ts
